# emrust-demo

./: Cargo.toml  NOTES.md
src/: main.rs  tnarx.rs
