[package]
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
readme = "README.md"
name = "embedded_rust_demonstration"
version = "0.1.0"
edition = "2018"

[dependencies]
bare-metal = "0.2.4"
bit_field = "*"
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1"
ssd1306 = "0.2"
embedded-graphics = "0.4.5"
embedded-hal = "0.2"
shift-register-driver = "0.1.1"

[dependencies.stm32f0xx-hal]
version = "0.10"
features = ["stm32f030x4"]
[dependencies.ili9341]
git = "https://github.com/jamwaffles/ili9341-rs/"
branch = "update-embedded-graphics"
features = ["graphics"]

[dependencies.hd44780-driver]
git = "https://github.com/david-sawatzke/hd44780-driver/"

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
